@@ -1,0 +1,79 @@
+Source: {$srcpkg}
+Priority: extra
+Section: {$section}
+Maintainer: {$author}
+Standards-Version: {$standards_version}
+Build-Depends: debhelper (>= 9)
+
+Package: {$srcpkg}
+Architecture: {$architecture}
+Depends: $\{misc:Depends\}
+Description: {$description}
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+
+Package: debhelper-brace-problem-1
+Architecture: {$architecture}
+Depends: $\{misc:Depends\}
+Description: {$description} another extra string
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package. Extra
+ string.  It may be an empty package.
+
+Package: debhelper-brace-problem-2
+Architecture: {$architecture}
+Depends: $\{misc:Depends\}
+Description: {$description} another extra string three
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package. Extra
+ string three.  It may be an empty package.
+
+Package: debhelper-brace-problem-3
+Architecture: {$architecture}
+Depends: $\{misc:Depends\}
+Description: {$description} three test case
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package. Extra
+ string three test case. It may be an empty package.
+
+Package: debhelper-brace-problem-4
+Architecture: {$architecture}
+Depends: $\{misc:Depends\}
+Description: {$description} fourth test case
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package. Extra
+ string fourth test case. It may be an empty package.
+
+Package: debhelper-brace-problem-5
+Architecture: {$architecture}
+Depends: $\{misc:Depends\}
+Description: {$description} fifth test case
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package. Extra
+ string fifth test case. It may be an empty package.
+
+Package: debhelper-brace-problem-6
+Architecture: {$architecture}
+Depends: $\{misc:Depends\}
+Description: {$description} sixth test case
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package. Extra
+ string sixth test case. It may be an empty package.
+
+Package: debhelper-brace-problem-good
+Architecture: {$architecture}
+Depends: $\{misc:Depends\}
+Description: {$description} good test case
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package. Should
+ not trigger lintian test. It may be an empty package.
+
