@@ -1,0 +1,1 @@
+{,foo}.txt usr/share/debhelper
