@@ -1,0 +1,2 @@
+\{.txt usr/share/debhelper
+\{good\}.txt usr/share/debhelper
